--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -1,4 +1,11 @@
 body {
   width: 1200px;
   font-family: Arial, Helvetica, sans-serif;
+  background: lightgrey;
+  padding: 0px 20px 0px 20px;
+}
+main {
+  width: 90%;
+  margin: auto;
+  background: gray;
 }
