--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -9,3 +9,122 @@ main {
   margin: auto;
   background: gray;
 }
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.part1 {
+  display: flex;
+  flex: 1;
+  background: lightblue;
+  flex-direction: column;
+}
+.part1 img {
+  width: 60%;
+  align-self: flex-end;
+  margin-top: auto;
+  margin-right: 10px;
+}
+
+.part1 h1 {
+  margin: 50px 100px 0px 150px;
+}
+.part1 p {
+  line-height: 30px;
+  margin: 20px 100px 0px 150px;
+}
+.part1 strong {
+  color: white;
+}
+
+.part1 button {
+  font-weight: bold;
+  width: 120px;
+  padding: 12px;
+  border-radius: 17px;
+  margin-left: 150px;
+  position: relative;
+  top: 100px;
+}
+
+.part2 {
+  flex: 1;
+  flex-direction: column;
+  display: flex;
+}
+.part2-1 {
+  display: flex;
+  flex: 1;
+  background: rgb(240, 105, 57);
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+}
+.part2-2 {
+  display: flex;
+  flex: 1;
+  background: orange;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+}
+.part2 h2 {
+  font-size: 40px;
+  color: white;
+  margin-top: 0;
+}
+.part2 h5 {
+  margin-bottom: 10px;
+}
+
+.topnav ul {
+  display: flex;
+  justify-content: center;
+  background: lightgray;
+  justify-content: space-around;
+  list-style: none;
+  margin: 0px;
+  padding: 20px 170px;
+}
+.topnav a {
+  text-decoration: none;
+  color: black;
+  opacity: 0.5;
+}
+a:hover {
+  opacity: 1;
+  font-weight: bold;
+}
+/* second page */
+.page2container{
+  display: flex;
+  background:rgb(194, 226, 236);
+  flex-direction: column;
+}
+.page2container h1{
+  align-self: center;
+  position: relative;
+  top:200px;
+  font-size: 60px;
+
+}
+.page2container img{
+  width:20%;
+ align-self: flex-end;
+ margin:0px 50px;
+
+}
+.page2nav ul {
+  display: flex;
+  justify-content: center;
+  background: lightgray;
+  justify-content: space-around;
+  list-style: none;
+  margin: 0px;
+  padding: 20px 170px;
+}
+.page2nav a {
+  text-decoration: none;
+  color: black;
+  opacity: 0.5;
+}
