--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -9,3 +9,147 @@ main {
   margin: auto;
   background: gray;
 }
+
+.bottom {
+  display: grid;
+  grid-template-columns: repeat(3, 360px);
+  grid-template-rows: 400px 400px 80px 400px;
+  grid-template-areas:
+    "box-1  box-2  box-3  "
+    "box-4  box-5  box-6  "
+    "footer  footer  footer "
+    "empty empty empty ";
+  font-size: 1.2rem;
+  font-weight: 600;
+
+  color: #585858;
+}
+
+aside {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-size: 2em;
+  padding: 30px;
+  color: gray;
+}
+
+.four {
+  color: #b34700;
+}
+
+.box-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: Center;
+  font-size: 3rem;
+  font-weight: 700;
+  grid-area: box-1;
+  background: #c2d4dd;
+  color: black;
+}
+
+.how {
+  margin: 0;
+}
+
+.works {
+  margin: 0;
+}
+
+.box-2 {
+  grid-area: box-2;
+  background: white;
+}
+
+.second {
+  text-align: center;
+  padding: 40px;
+}
+
+.box-3 {
+  grid-area: box-3;
+  text-align: center;
+  background: lightgrey;
+}
+
+.third {
+  padding-top: 40px;
+  margin-bottom: 0;
+}
+
+.quote {
+  margin: 0;
+}
+
+.box-4 {
+  grid-area: box-4;
+  background: white;
+}
+
+.fourth {
+  width: 280px;
+  padding: 40px;
+  text-align: center;
+}
+
+.box-5 {
+  grid-area: box-5;
+  background: #ff7b25;
+}
+
+.fifth {
+  padding: 50px 40px 40px 40px;
+  color: #662900;
+}
+
+.box-6 {
+  grid-area: box-6;
+  background: white;
+}
+
+.sixth {
+  padding: 50px;
+  text-align: center;
+}
+
+footer {
+  grid-area: footer;
+  background: #a6a6a6;
+}
+
+.empty {
+  grid-area: empty;
+  background: gray;
+}
+
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+  color: black;
+  margin-top: 0;
+}
+
+footer {
+  display: Flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+}
+
+a:visited {
+  color: blue;
+}
