--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -9,6 +9,7 @@ main {
   margin: auto;
   background: gray;
 }
+/* Lijuan */
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -91,28 +92,23 @@ main {
   color: black;
   opacity: 0.5;
 }
-a:hover {
-  opacity: 1;
-  font-weight: bold;
-}
+
 /* second page */
-.page2container{
+.page2container {
   display: flex;
-  background:rgb(194, 226, 236);
+  background: rgb(194, 226, 236);
   flex-direction: column;
 }
-.page2container h1{
+.page2container h1 {
   align-self: center;
   position: relative;
-  top:200px;
+  top: 200px;
   font-size: 60px;
-
 }
-.page2container img{
-  width:20%;
- align-self: flex-end;
- margin:0px 50px;
-
+.page2container img {
+  width: 20%;
+  align-self: flex-end;
+  margin: 0px 50px;
 }
 .page2nav ul {
   display: flex;
@@ -128,6 +124,230 @@ a:hover {
   color: black;
   opacity: 0.5;
 }
+a:hover.home {
+  opacity: 1;
+  font-weight: bold;
+}
+
+/* Sharon */
+
+/*bottom first page*/
+.bottom {
+  display: grid;
+  grid-template-columns: repeat(3, 360px);
+  grid-template-rows: 400px 400px 80px 400px;
+  grid-template-areas:
+    "box-1  box-2  box-3  "
+    "box-4  box-5  box-6  "
+    "end end end "
+    "empty empty empty ";
+  font-size: 1.2rem;
+  font-weight: 600;
+
+  color: #585858;
+}
+
+aside {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-size: 2em;
+  padding: 30px;
+  color: gray;
+}
+
+.four {
+  color: #b34700;
+}
+
+.box-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: Center;
+  font-size: 3rem;
+  font-weight: 700;
+  grid-area: box-1;
+  background: #c2d4dd;
+  color: black;
+}
+
+.how {
+  margin: 0;
+}
+
+.works {
+  margin: 0;
+}
+
+.box-2 {
+  grid-area: box-2;
+  background: white;
+}
+
+.second {
+  text-align: center;
+  padding: 40px;
+}
+
+.box-3 {
+  grid-area: box-3;
+  text-align: center;
+  background: lightgrey;
+}
+
+.third {
+  padding-top: 40px;
+  margin-bottom: 0;
+}
+
+.quote {
+  margin: 0;
+}
+
+.box-4 {
+  grid-area: box-4;
+  background: white;
+}
+
+.fourth {
+  width: 280px;
+  padding: 40px;
+  text-align: center;
+}
+
+.box-5 {
+  grid-area: box-5;
+  background: #ff7b25;
+}
+
+.fifth {
+  padding: 50px 40px 40px 40px;
+  color: #662900;
+}
+
+.box-6 {
+  grid-area: box-6;
+  background: white;
+}
+
+.sixth {
+  padding: 50px;
+  text-align: center;
+}
+
+.end {
+  grid-area: end;
+  background: #a6a6a6;
+  display: Flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
+}
+
+.empty {
+  grid-area: empty;
+  background: gray;
+}
+
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+  color: black;
+  margin-top: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover.top {
+  color: red;
+}
+
+a:visited {
+  color: blue;
+}
+
+/*middle contact us page*/
+
+.middle {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  color: white;
+  background: #a6a6a6;
+}
+
+.mind {
+  width: 45%;
+  padding: 80px 0px 60px 80px;
+}
+
+h1.mind {
+  font-size: 3rem;
+  width: 450px;
+  overflow-wrap: break-word;
+}
+
+.form {
+  margin-top: 120px;
+}
+
+input[type="email"] {
+  width: 350px;
+  height: 30px;
+  border-radius: 5px;
+  margin-top: 5px;
+}
+
+#comments {
+  width: 350px;
+  height: 200px;
+  border-radius: 5px;
+}
+
+label,
+input {
+  display: block;
+}
+
+label {
+  margin-bottom: 10px;
+}
+
+textarea {
+  margin-top: 5px;
+}
+
+.send {
+  margin-top: 30px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+button {
+  width: 150px;
+  height: 40px;
+  border-radius: 20px;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+::placeholder {
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  font-weight: bold;
+  padding: 20px;
+  font-size: 1rem;
+}
+
+/* Cindy */
 
 .top {
   width: 100%;
@@ -146,30 +366,33 @@ nav {
     "join join join us us us"
     "pic pic pic pic pic pic"
     "text text text text text text";
-  grid-gap: 0.5rem;
+  grid-gap: 0;
 }
 .join {
-  background: #fcf;
+  background: gray;
   grid-area: join;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  padding: 3rem;
 }
 .us {
-  background: #ffc;
+  background: gray;
   grid-area: us;
+  padding: 3rem;
 }
 .text {
-  background: #cfc;
+  background: orange;
   grid-area: text;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  padding: 0rem 5rem 5rem 5rem;
 }
 .pic {
-  background: #fcf;
+  background: gray;
   grid-area: pic;
   display: grid;
   grid-template-columns: auto;
@@ -179,21 +402,21 @@ nav {
     "down";
 }
 .up {
-  background: orange;
+  background: gray;
   grid-area: up;
-  height: 150px;
+  height: 250px;
 }
 .down {
-  background: lightblue;
+  background: orange;
   grid-area: down;
-  height: 150px;
+  height: 250px;
 }
 .customer {
   position: absolute;
   z-index: 999;
-  width: 80%;
+  width: 980px;
   height: 300px;
-  margin: 30px 30px 50px 50px;
+  margin: 8rem 0rem 3rem 3rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -201,14 +424,26 @@ nav {
 }
 .intro {
   width: 30%;
-  height: 200px;
+  height: 400px;
   background: #ffffff;
   margin: 1rem;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 .image {
   width: 90%;
-  padding: -20px;
+  height: 40%;
+  background: orange;
+  border-radius: 5px;
+  margin: -1rem 0rem 0rem 0rem;
+}
+img.child {
+  height: 150px;
+  object-fit: cover;
+  position: relative;
 }
 h1.financial {
   color: #ffffff;
@@ -221,18 +456,18 @@ h1.visit-us {
 }
 button {
   background: #ffffff;
+  width: 150px;
+  height: 40px;
   border-radius: 20px;
+  font-size: 15px;
 }
 .how-it-works {
-  width: 100%;
-}
-footer {
   width: 100%;
 }
 .mail-us {
   width: 100%;
 }
-.visit {
+.visit-here {
   width: 100%;
 }
 .come-visit {
