--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -131,7 +131,6 @@ a:hover.home {
 
 /* Sharon */
 
-/*bottom first page*/
 .bottom {
   display: grid;
   grid-template-columns: repeat(3, 360px);
@@ -263,6 +262,7 @@ aside {
 
 a {
   text-decoration: none;
+  text-align: center;
 }
 
 a:hover.top {
